Infra/.aws-sam/build/LoadBalancerStack/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Parameters:
  vpc:
    Type: String
    Description: The ID of the VPC where the load balancer will be created.
  subnets:
    Type: String
    Description: A list of subnet IDs for the load balancer.
Resources:
  TargetGroup1:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: target-group-1
      Port: 3000
      Protocol: HTTP
      VpcId:
        Ref: vpc
      TargetType: ip
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckPort: '3000'
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5
      Matcher:
        HttpCode: '200'
      UnhealthyThresholdCount: 2
  TargetGroup2:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: target-group-2
      Port: 3000
      Protocol: HTTP
      VpcId:
        Ref: vpc
      TargetType: ip
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckPort: '3000'
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5
      Matcher:
        HttpCode: '200'
      UnhealthyThresholdCount: 2
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the load balancer
      VpcId:
        Ref: vpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: '0.0.0.0/0'
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: '0.0.0.0/0'
  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: my-load-balancer
      Subnets:
        Fn::Split:
        - ','
        - Ref: subnets
      SecurityGroups:
      - Ref: LoadBalancerSecurityGroup
      Scheme: internet-facing
      Type: application
  ProdListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: TargetGroup1
      LoadBalancerArn:
        Ref: LoadBalancer
      Port: 80
      Protocol: HTTP
  TestListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: TargetGroup2
      LoadBalancerArn:
        Ref: LoadBalancer
      Port: 8080
      Protocol: HTTP
Outputs:
  SecurityGoup:
    Value:
      Ref: LoadBalancerSecurityGroup
    Description: The security group ID for the load balancer
  LoadBalancerDNSName:
    Value:
      Fn::GetAtt:
      - LoadBalancer
      - DNSName
    Description: The DNS name of the load balancer
  ProdTargetGroupArn:
    Value:
      Ref: TargetGroup1
    Description: The ARN of the production target group
  ProdTargetGroupName:
    Value:
      Fn::GetAtt:
      - TargetGroup1
      - TargetGroupName
    Description: The name of the production target group
  TestTargetGroupName:
    Value:
      Fn::GetAtt:
      - TargetGroup2
      - TargetGroupName
    Description: The name of the production target group
  ProdListenerArn:
    Value:
      Ref: ProdListener
    Description: The ARN of the production listener
  TestListenerArn:
    Value:
      Ref: TestListener
    Description: The ARN of the test listener
